--- a/Views/CustomMessageBox.xaml
+++ b/Views/CustomMessageBox.xaml
@@ -11,13 +11,21 @@
         ShowInTaskbar="False"
         WindowStyle="None">
     <Window.Resources>
+        <!-- Dynamic color resources that will be set from the generator -->
+        <SolidColorBrush x:Key="MessageBoxButtonBackground" Color="#2E75B6" />
+        <SolidColorBrush x:Key="MessageBoxButtonHoverBackground" Color="#3E85C6" />
+        <SolidColorBrush x:Key="MessageBoxButtonPressedBackground" Color="#1E65A6" />
+        <SolidColorBrush x:Key="MessageBoxButtonDisabledBackground" Color="#CCCCCC" />
+        <SolidColorBrush x:Key="MessageBoxButtonForeground" Color="White" />
+        <SolidColorBrush x:Key="MessageBoxButtonDisabledForeground" Color="#888888" />
+
         <Style x:Key="MessageBoxButton" TargetType="Button">
             <Setter Property="Margin" Value="8,0,0,0" />
             <Setter Property="MinWidth" Value="86" />
             <Setter Property="Height" Value="32" />
             <Setter Property="Padding" Value="8,0" />
-            <Setter Property="Background" Value="#2E75B6" />
-            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Background" Value="{DynamicResource MessageBoxButtonBackground}" />
+            <Setter Property="Foreground" Value="{DynamicResource MessageBoxButtonForeground}" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="Template">
                 <Setter.Value>
@@ -32,14 +40,14 @@
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#3E85C6" />
+                                <Setter Property="Background" Value="{DynamicResource MessageBoxButtonHoverBackground}" />
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
-                                <Setter Property="Background" Value="#1E65A6" />
+                                <Setter Property="Background" Value="{DynamicResource MessageBoxButtonPressedBackground}" />
                             </Trigger>
                             <Trigger Property="IsEnabled" Value="False">
-                                <Setter Property="Background" Value="#CCCCCC" />
-                                <Setter Property="Foreground" Value="#888888" />
+                                <Setter Property="Background" Value="{DynamicResource MessageBoxButtonDisabledBackground}" />
+                                <Setter Property="Foreground" Value="{DynamicResource MessageBoxButtonDisabledForeground}" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -48,7 +56,7 @@
         </Style>
     </Window.Resources>
 
-    <Border BorderBrush="#2E75B6" BorderThickness="1">
+    <Border x:Name="BorderBrush" BorderThickness="1">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
