Add example of global custom style.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomMessageBox"
         mc:Ignorable="d"
-        Title="CustomMessageBox Demo" Height="700" Width="800"
+        Title="CustomMessageBox Demo" Height="900" Width="800"
         Background="#f0f0f0">
 
     <Window.Resources>
@@ -187,6 +187,11 @@
                         Content="Style Demo Sequence" 
                         Style="{StaticResource DemoButton}" 
                         Click="BtnStyleDemo_Click"/>
+
+                <Button x:Name="btnToggleCustomStyle" 
+                        Content="Toggle Custom Style" 
+                        Style="{StaticResource DemoButton}" 
+                        Click="BtnToggleCustomStyle_Click"/>
             </WrapPanel>
 
             <!-- Result Display Section -->
