--- a/Views/CustomMessageBox.xaml
+++ b/Views/CustomMessageBox.xaml
@@ -18,6 +18,7 @@
         <SolidColorBrush x:Key="MessageBoxButtonDisabledBackground" Color="#CCCCCC" />
         <SolidColorBrush x:Key="MessageBoxButtonForeground" Color="White" />
         <SolidColorBrush x:Key="MessageBoxButtonDisabledForeground" Color="#888888" />
+        <DropShadowEffect x:Key="ButtonShadow" ShadowDepth="2" BlurRadius="4" Opacity="0.3" />
 
         <Style x:Key="MessageBoxButton" TargetType="Button">
             <Setter Property="Margin" Value="8,0,0,0" />
@@ -33,7 +34,8 @@
                         <Border Background="{TemplateBinding Background}" 
                                 BorderBrush="{TemplateBinding BorderBrush}" 
                                 BorderThickness="{TemplateBinding BorderThickness}" 
-                                CornerRadius="4">
+                                CornerRadius="4"
+                                Effect="{StaticResource ButtonShadow}">
                             <ContentPresenter HorizontalAlignment="Center" 
                                               VerticalAlignment="Center" 
                                               RecognizesAccessKey="True" />
